# kauma

./: .gitignore  .python-version  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build  kauma  requirements.txt
.github/workflows/: cargo.yaml  kauma.yaml  mock_kauma.yaml  release.yaml
crates/bint-easy/: Cargo.toml
crates/bint-easy/src/: lib.rs  u256.rs
crates/padsim/: Cargo.toml
crates/padsim/src/: lib.rs  main.rs
example_challenges/: addsub.json  block2poly.json  block2poly_gcm.json  block2poly_many.json  combined.json  gcm.json  gcm_crack.json  gfdiv.json  gfmul.json  gfmul_many.json  gfpoly_add.json  gfpoly_diff.json  gfpoly_divmod.json  gfpoly_factor_ddf.json  gfpoly_factor_edf.json  gfpoly_factor_sff.json  gfpoly_monic.json  gfpoly_mul.json  gfpoly_pow.json  gfpoly_sort.json  gfpoly_sort_many.json  gfpoly_sort_special.json  gfpoly_sqrt.json  pad.json  pad_many.json  poly2block.json  poly2block_gcm.json  sd_displaypolyblock.json  sea128.json  xex.json
scripts/: moar_gfmul.py  padding_oracle.py  profile.sh
src/: lib.rs  main.rs  settings.rs
src/challenge/: c1.rs  c2.rs  cipher.rs  debug.rs  example.rs  ffield.rs  gcm_crack.rs  mod.rs  pad.rs  polyfactor.rs  superpoly.rs
src/challenge/ffield/: element.rs  mod.rs
src/common/: interface.rs  mod.rs
