[package]
rust-version = "1.75"
name = "kauma-analyzer"
default-run = "kauma"
version = "0.5.0"
edition = "2021"
publish = false
authors = ["Christoph J. Scherr <software@cscherr.de>"]
license = "MIT"
description = "Solves exams from my professor for cryptoanalysis"
readme = "README.md"
homepage = "https://github.com/PlexSheep/kauma"
repository = "https://github.com/PlexSheep/kauma"


[dependencies]
anyhow = "1.0.91"
base64 = "0.22"
getopts = "0.2"
openssl = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
threadpool = "1.8"
bint-easy = { path = "./crates/bint-easy/" }
num = "0.4"
rand = "0.8"
num_cpus = "1.16.0"

[profile.profiling]
inherits = "release"
debug = true

[[bin]]
name = "kauma"
path = "src/main.rs"

[workspace]
members = ["./crates/bint-easy/", ".", "crates/padsim"]

[dev-dependencies]
padsim = { path = "crates/padsim" }
